# pySimBlocks

./: .gitignore  .readthedocs.yaml  Authors.txt  CONTRIBUTING.md  README.md  doc.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yaml  python-tests.yaml
docs/: Makefile
docs/User_Guide/: getting_started.md  tutorial_1_python.md  tutorial_2_gui.md  tutorial_3_sofa.md
docs/source/: conf.py  index.rst
examples/: README.md  example_closed_chain.py  example_observer.py  example_open_chain.py  example_siso.py  example_state_feedback.py
examples/benchmarks/: README.md
examples/dc_motor/: multiple_order.py  openloop.py  pi.py  pid.py  pid_block.py  pid_block_vs_manual.py
examples/quick_start/: filter.py  oscillator.py
examples/real_time/: gui_emio.py  model.yaml  parameters.py  parameters.yaml  run.py
examples/simulink/: openloop.py  pi.py  pid.py  pid_backward.py  simulation.csv  simulation.npz  step.py  test.py
pySimBlocks/: __init__.py  cli.py
pySimBlocks/api/: editor.py  generate_block_regestry.py  helpers.py  launch.py  project_export.py  pySimBlocks_blocks_registry.yaml  pySim_blocks_registry.yaml  ui_action.py  ui_blocks.py  ui_codegen.py  ui_diagram.py  ui_load_yaml.py  ui_plots.py  ui_plots_definition.py  ui_project_export.py  ui_project_settings.py  ui_run_sim.py  ui_simulation_settings.py  ui_workspace.py  ui_yaml.py
pySimBlocks/blocks/: __init__.py
pySimBlocks/blocks_metadata/: block_meta.py  parameter_meta.py  port_meta.py
pySimBlocks/core/: __init__.py  block.py  block_source.py  config.py  fixed_time_manager.py  model.py  task.py  (+3 more)
test/: test_delay.py  test_delay_vs_statespace.py  test_discrete_derivator.py  test_integrator.py  test_linear_state_space.py  test_mux.py  test_ramp.py
uml/: pySimBlocks-GUI.uxf
(+437 files in other folders)
