[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySimBlocks"
version = "0.1.0"
description = "A block-diagram simulation environment with PySide6 editor"
authors = [
    {name = "Antoine Alessandrini", email = "antoine.alessandrini@univ-lille.fr"}
]
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE.md"]
requires-python = ">=3.10"
keywords = ["simulation", "block-diagram", "control", "discrete-time", "pyside6"] 
classifiers = [ 
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "PySide6",
    "typing_extensions; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/AlessandriniAntoine/pySimBlocks"
Repository = "https://github.com/AlessandriniAntoine/pySimBlocks"
Issues = "https://github.com/AlessandriniAntoine/pySimBlocks/issues"

[project.scripts]
pysimblocks = "pySimBlocks.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pySimBlocks = [
    "docs/blocks/**/*.md",
    "project/pySimBlocks_blocks_index.yaml",
]

[project.optional-dependencies]
examples = [
    "control",
    "qpsolvers[osqp,clarabel]",
]

tests = [
    "pytest",
    "pytest-qt",
]
